update: Changelog 版面改版

--- a/n8nmanager/changelogs/v0.10.0.md
+++ b/n8nmanager/changelogs/v0.10.0.md
@@ -1,24 +1,8 @@
 ---
 version: 0.10.0
 date: 2025-10-01
+title: 工作流程詳細資訊與效能提升
 ---
+本次更新帶來了全新的工作流程詳細資訊頁面，讓你可以查看工作流程的完整設定和執行歷史統計，更清楚掌握每個工作流程的運作狀況。我們也全面改進了深色模式的視覺體驗，調整色彩對比度，大幅降低長時間使用時的眼睛疲勞感。此外，執行記錄列表現在支援關鍵字搜尋功能，讓你能快速找到特定的執行記錄。
 
-## ✨ 新增功能 (New Features)
-
-- 工作流程詳細資訊： 新增工作流程詳細資訊頁面，可以查看工作流程的完整設定和執行歷史統計。
-
-- 深色模式優化： 全面改進深色模式的視覺體驗，調整色彩對比度，降低長時間使用的眼睛疲勞。
-
-- 執行記錄搜尋： 在執行記錄列表中新增關鍵字搜尋功能，可快速找到特定的執行記錄。
-
-## 🛠️ 優化與改進 (Optimizations & Improvements)
-
-- 連線效能優化： 改善與 n8n 伺服器的連線穩定性，減少連線逾時的發生機率。
-
-- 記憶體管理： 優化大量執行記錄的記憶體使用，提升應用程式整體流暢度。
-
-## 🐛 錯誤修復 (Bug Fixes)
-
-- 修正部分裝置上工作流程狀態顯示不正確的問題。
-
-- 修復執行記錄載入時偶發的閃退問題。
+在效能方面，我們改善了與 n8n 伺服器的連線穩定性，減少連線逾時的發生機率，並優化了大量執行記錄的記憶體使用，提升應用程式整體流暢度。同時也修正了部分裝置上工作流程狀態顯示不正確的問題，以及執行記錄載入時偶發的閃退問題，讓你的使用體驗更加穩定順暢。
