--- a/n8nmanager/changelogs/v0.11.0.md
+++ b/n8nmanager/changelogs/v0.11.0.md
@@ -1,23 +1,8 @@
 ---
 version: 0.11.0
 date: 2025-10-06
+title: 執行記錄管理與隱私權完善
 ---
-## ✨ 新增功能 (New Features)
-- 新增首次啟動的免責聲明與隱私權政策。
-- 新增執行記錄批量刪除功能。
-- 新增執行記錄時間篩選功能。
-- 新增執行記錄單獨刪除功能。
+本次更新首次加入了免責聲明與隱私權政策頁面，確保你在使用前能清楚了解相關資訊，並持續改善該頁面的閱讀體驗。在執行記錄管理方面，我們新增了批量刪除、單獨刪除及時間篩選等功能，讓你能更有效率地管理大量的執行記錄。無論是清理舊資料或是搜尋特定時段的記錄，現在都變得更加輕鬆便利。
 
-## 🛠️ 優化與改進 (Optimizations & Improvements)
-- 改善免責聲明與隱私權頁面體驗。
-- 優化執行記錄批量刪除介面與操作。
-- 提升執行記錄篩選整合效率。
-- 改善刪除執行記錄後的介面導航。
-- 優化時間篩選介面的使用者體驗。
-- 提升應用程式的多語言支援精確度。
-- 強化工作流程資料驗證機制。
-- 改善連線設定的錯誤處理。
-- 增強應用程式的異常處理能力。
-
-## 🐞 問題修復 (Bug Fixes)
-- 修復時間篩選介面顯示寬度異常。
+此外，我們也優化了批量刪除介面的操作流程，改善了刪除記錄後的介面導航，並提升了時間篩選介面的使用者體驗。在應用程式整體穩定性方面，強化了工作流程資料驗證機制、改善了連線設定的錯誤處理，並增強了異常處理能力。同時也提升了多語言支援的精確度，並修復了時間篩選介面顯示寬度異常的問題。
